feat: Implement createNote.
